--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.3.7",
-        "@heroicons/react": "^2.1.3"
+        "@heroicons/react": "^2.1.3",
+        "react-minimal-pie-chart": "^8.4.0"
     }
 }
