--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@ant-design/icons": "^5.3.7",
         "@heroicons/react": "^2.1.3",
+        "flowbite-react": "^0.9.0",
         "react-minimal-pie-chart": "^8.4.0"
     }
 }
