--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dependencies": {
         "@ant-design/icons": "^5.3.7",
         "@heroicons/react": "^2.1.3",
+        "@reduxjs/toolkit": "^2.2.5",
         "flowbite-react": "^0.9.0",
-        "react-minimal-pie-chart": "^8.4.0"
+        "react-minimal-pie-chart": "^8.4.0",
+        "react-redux": "^9.1.2"
     }
 }
