--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@ant-design/icons": "^5.3.7",
         "@heroicons/react": "^2.1.3",
         "@reduxjs/toolkit": "^2.2.5",
+        "antd": "^5.18.3",
         "flowbite-react": "^0.9.0",
         "react-minimal-pie-chart": "^8.4.0",
         "react-redux": "^9.1.2"
