--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@reduxjs/toolkit": "^2.2.5",
         "antd": "^5.18.3",
         "flowbite-react": "^0.9.0",
+        "moment": "^2.30.1",
         "react-minimal-pie-chart": "^8.4.0",
         "react-redux": "^9.1.2"
     }
