--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "antd": "^5.18.3",
         "apexcharts": "^4.3.0",
         "chart.js": "^4.4.4",
+        "dompurify": "^3.2.5",
         "flowbite-react": "^0.9.0",
         "laravel-echo": "^1.16.1",
         "moment": "^2.30.1",
@@ -34,6 +35,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-csv": "^2.2.2",
         "react-minimal-pie-chart": "^8.4.0",
+        "react-quill": "^2.0.0",
         "react-redux": "^9.1.2"
     }
 }
